--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -5,10 +5,16 @@
 	<p>{{ author.date_of_birth }}</p>
 	<div style="margin-left:30px, margin-top:30px">
 		<h3>Books</h3>
-		{% for book in author.book_set.all %}
-			<p><a href="{{ book.get_absolute_url }}">{{ book.title }}</a><strong>({{ book.bookinstance_set.all.count }})</strong></p>
-			<p>{{ book.summary }} </p>
-		{% endfor %}
+		{% if author.book_set.all.count %}
+			{% for book in author.book_set.all %}
+				<p><a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
+				<strong>({{ book.bookinstance_set.all.count }})</strong></p>
+				<p>{{ book.summary }} </p>
+			{% endfor %}
+
+		{% else %}
+			<h3>No books from this author in the library.</h3>
+		{% endif %}	
 	</div>
 {% endblock %}
 
