--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -17,4 +17,6 @@
     <li><strong>Harry Potter books:</strong> {{ num_HarryPotter_books }}</li>
   </ul>
 
+  <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
+
 {% endblock %}
