--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -25,12 +25,14 @@
           <li><a href="{% url 'index' %}">Home</a></li>
           <li><a href="{% url 'books' %}">All books</a></li>
           <li><a href="{% url 'authors' %}">All authors</a></li>
+          <br>
           {% if user.is_authenticated %}
             <li>User: {{ user.get_username }}</li>
             <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
             <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
             {% if perms.catalog.can_mark_returned %}  
               <hr>
+              <span>Staff</span><br>
               <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
             {% endif %}
           {% else %}
